# sasha

./: .env.example  Makefile  README.md  main.py  pyproject.toml
src/sasha/: guard_middleware.py  handlers.py  utils.py
src/sasha/core/: shell.py  terminal.py
src/sasha/middlewares/: __init__.py  chat_action.py  shell.py  terminal.py
