[project]
name = "friday"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "coloredstrings>=3.1.0",
    "pexpect>=4.9.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "isort>=6.1.0",
    "ruff>=0.13.2",
]
